# BABAPPAi

./: .gitignore  BABAPPAi_CHATGPT_UPLOAD_REPORT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Letter from Principal.docx  README.md  RELEASE_CHECKLIST.md  SECURITY.md  aln.fasta  babappai.aux  babappai.fdb_latexmk  babappai.fls  babappai.out  babappaomega_v2.aux  babappaomega_v2.fdb_latexmk  babappaomega_v2.fls  babappaomega_v2.out  babappaomega_v2.tex  manifest.in  pyproject.toml  simulate_eii_regimes_upgraded.py  tree.nwk
babappai/: __init__.py  cli.py  dispersion.py  encoding.py  identifiability.py  inference.py  input_qc.py  interpret.py  metadata.py  model_manager.py  models.py  run_pipeline.py  stats.py  tree_calibration.py  tree_neutral.py
babappaomega/: __init__.py  calibration.py  cli.py  encoding.py  identifiability.py  inference.py  interpret.py  metadata.py  models.py  tree.py  tree_calibration.py  tree_neutral.py  utils.py
babappaomegav1.3.0/: .gitignore  README.md  aln.babappaomega.interpretation.txt  aln.babappaomega.json  manifest.in  pyproject.toml  tmp_grid.json
benchmark/: benchmark_genome_scale.py  empirical.fasta  tree_sim.nwk
demo/: README.txt
demo_babappai/: README.txt  aln.fasta  synthetic_grid.json
demo_babappai_out/: run_metadata.json
demo_out/: interpretation.txt  results.json
docs/: calibration_abstention_semantics.md  offline_empirical_runner.md  reproducibility_artifacts.md  reproducibility_validation.md  validation_threshold_calibration.md
manuscript/: babappai.tex  references.bib
scripts/: analyze_replicate_recoverability.py  assert_empirical_results_use_requested_ceii.py  audit_ceii_versions_empirical.py  audit_sigma0_collapse.py  bootstrap_eii_thresholds.py  build_ceii_v2_asset.py  compare_ceii_subset_versions.py  fit_ceii_calibration.py  generate_neutral_calibration.py  rerun_empirical_from_precomputed.py  run_ceii_calibration_benchmark.py  run_empirical_ortholog_validation.py  run_empirical_ortholog_validation_offline.sh  run_full_pipeline_validation.py  run_sigma0_ablation.py  simulate_alignment_validation_dataset.py  trace_ceii_empirical_subset.py
tests/: test_adapters.py  test_ceii_calibration.py  test_cli.py  test_full_pipeline_validation.py  test_identifiability.py  test_input_qc_preflight.py  test_model_manager.py  test_package_alias.py  test_recoverability_targets.py  test_run_pipeline_summary.py  test_significance_framework.py  test_validation_report.py  (+1 more)
(+87936 files in other folders)
