[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babappai"
description = "BABAPPAi: diagnostic framework for identifiability of episodic branch-site structure"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Krishnendu Sinha" }]
dynamic = ["version"]

dependencies = [
  "torch>=2.0",
  "numpy",
  "biopython",
  "ete3",
  "six",
  "platformdirs"
]

keywords = [
  "episodic selection",
  "branch-site",
  "identifiability",
  "evolutionary genomics",
  "likelihood-free inference",
  "deep learning"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-mock>=3.14"
]
dev = [
  "build>=1.2",
  "twine>=5",
  "pytest>=8"
]

[project.urls]
Homepage = "https://github.com/krishnendusinha/babappai"
Documentation = "https://github.com/krishnendusinha/babappai"
Source = "https://github.com/krishnendusinha/babappai"
Issues = "https://github.com/krishnendusinha/babappai/issues"
Changelog = "https://github.com/krishnendusinha/babappai/blob/main/CHANGELOG.md"
LegacySoftwareDOI = "https://doi.org/10.5281/zenodo.18520163"
LegacyModelDOI = "https://doi.org/10.5281/zenodo.18195869"

[project.scripts]
babappai = "babappai.cli:main"
babappaomega = "babappaomega.cli:main"

[tool.setuptools]
packages = [
  "babappai",
  "babappai.assets",
  "babappai.data",
  "babappai.calibration",
  "babappai.validation",
  "babappaomega",
  "babappaomega.assets",
  "babappaomega.data"
]

[tool.setuptools.dynamic]
version = { attr = "babappai.metadata.SOFTWARE_VERSION" }

[tool.setuptools.package-data]
babappai = [
  "py.typed",
  "data/*.json",
  "assets/*.json"
]
babappaomega = [
  "py.typed",
  "data/*.json",
  "assets/*.json"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
